--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -96,6 +96,7 @@
 
 .header h1 {
     padding: 0;
+    padding-bottom:10px;
     margin: 0;
     width: 100%;
     text-align: center;
@@ -123,7 +124,7 @@
 
 .searchbar form .inner-form {
     background: rgba(0, 0, 0, 0.5);
-    padding: 16px;
+    padding: 4px;
     display: flex;
     width: 100%;
     justify-content: space-between;
@@ -143,14 +144,14 @@
 }
 
 .input-field-one {
-    height: 70px;
+    height: 70%;
     margin: 2px;
     width: 70%;
     background: #fafafa;
     margin: 9px;
     font-family: 'raleway', sans-serif;
     color: grey;
-    padding-top: 12px;
+    padding-top: 0;
     border-radius: 5px;
 
 }
@@ -165,20 +166,22 @@ input {
 }
 
 .input-field-two {
-    height: 70px;
-    margin: 2px;
+    height: 44px;
     width: 30%;
     background: #fafafa;
-    margin: 9px;
+    margin-right: 9px;
     font-family: 'raleway', sans-serif;
     color: grey;
     border-radius: 5px;
 }
 
 /*--------------------------------------------Map*/
+.section-one .col-12{
+    padding:0;
+}
 
 #map {
-    min-height: 500px;
+    min-height: 700px;
     margin-bottom: 100px;
     margin-top: 20px;
     width: 100%;
@@ -220,7 +223,6 @@ table {
     height: 100%;
     font-family: 'raleway', sans-serif;
     color: grey;
-    margin-left: 9px;
     border: none;
     background-color: #fafafa;
     width: 100%;
@@ -241,9 +243,7 @@ table {
 #resultsTable {
     display: block;
     border-collapse: collapse;
-    width: 400px;
-    height: 500px;
-    padding-right: 10px;
+    height: 700px;
     overflow-y: scroll;
 }
 
@@ -582,12 +582,12 @@ footer {
 
 @media(min-width: 320px) and (max-width:991px) {
     .input-field-one {
-        width: 70%;
+        width: 100%;
     }
 }
 
 @media(min-width: 320px) and (max-width:991px) {
-    .input-field-one input #autocomplete {
+    .input-field-one .input #autocomplete {
         width: 70%;
     }
 }
